Continue work on dark mode

--- a/src/views/badges.css
+++ b/src/views/badges.css
@@ -3,20 +3,24 @@
     padding: 1px 6px 3px;
     margin-right: 1ex;
     text-shadow: 1px 1px rgba(255, 255, 255, .35);
-    background: #e4e4e4;
+    background: rgba(177, 177, 177, 0.3);
     border-radius: 3px;
     font-size: 85%;
-    color: black;
+    color: var(--discovery-color);
     text-decoration: none;
     white-space: nowrap;
 }
 .view-pill-badge {
     border-radius: 9px;
 }
+.discovery[data-darkmode] .view-badge,
+.discovery[data-darkmode] .view-pill-badge {
+    text-shadow: 1px 1px rgba(0, 0, 0, .1);
+}
 
 .view-badge:hover,
 .view-pill-badge:hover {
-    color: black;
+    color: var(--discovery-color);
 }
 
 .view-badge[href]:hover,
