--- a/src/pages/report/header.css
+++ b/src/pages/report/header.css
@@ -8,9 +8,7 @@
     padding: 22px 40px 7px;
     margin: 0 -40px 18px;
     background-color: rgba(255, 255, 255, .92);
-    transition-property: background-color;
-    transition-duration: .25s;
-    transition-timing-function: ease-in;
+    transition: background-color .25s ease-in;
 }
 .discovery[data-darkmode] .page-report > .report-header {
     background-color: rgba(36, 36, 36, .92);
@@ -40,6 +38,7 @@
 }
 .page-report > .report-header .report-header-text input {
     font: inherit;
+    color: inherit;
     position: absolute;
     top: 0;
     left: 0;
@@ -48,17 +47,16 @@
     padding: 0;
     opacity: .0001;
     border: 1px solid #aaa;
-    border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
-    background-color: rgba(255, 255, 255, .3);
+    border-color: transparent transparent #aaa transparent;
+    background-color: transparent;
 }
 .page-report > .report-header .report-header-text input:hover,
 .page-report > .report-header .report-header-text input:focus {
     opacity: 1;
 }
 .page-report > .report-header .report-header-text input:focus {
-    border-color: #0af;
-    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
+    border-bottom-color: #0af;
+    box-shadow: 0 3px 0 0 rgba(0, 170, 255, .2) !important;
     outline: 0;
 }
 .page-report > .report-header .report-header-text .timestamp {
