--- a/src/views/table-row.css
+++ b/src/views/table-row.css
@@ -1,3 +1,3 @@
-.view-table-row:not(:last-child) {
+.view-table-row:not(:last-child) > td {
     border-bottom: 1px solid rgba(170, 170, 170, 0.2);
 }
