--- a/src/views/select.css
+++ b/src/views/select.css
@@ -11,9 +11,9 @@
     line-height: 1.2;
 
     border-radius: 3px;
-    border: 1px solid #ccc;
-    background-color: white;
-    color: black;
+    border: 1px solid rgba(127, 127, 127, 0.4);
+    background-color: rgba(255, 255, 255, .1);
+    color: var(--discovery-color);
     outline: none;
 }
 .view-select::after {
@@ -30,15 +30,20 @@
     background-image: url('select-arrow.svg');
     background-size: 1em;
     background-position: center;
-}
-.view-select:hover {
-    border-color: #b3b3b3;
+    cursor: pointer;
 }
 .view-select.discovery-view-popup-active,
 .view-select:focus {
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2);
-    border-color: #b3b3b3;
+    border-color: rgba(128, 128, 128, 0.6);
     z-index: 1;
+}
+.view-select:hover {
+    background-color: rgba(221, 221, 221, 0.3);
+    border-color: rgba(170, 170, 170, 0.6);
+}
+.view-select:active {
+    background-color: rgba(131, 131, 131, 0.25);
 }
 .view-select .view-menu-item {
     padding-top: 8px;
