--- a/src/views/tab.css
+++ b/src/views/tab.css
@@ -1,19 +1,28 @@
 .view-tab {
     display: inline-block;
-    padding: 2px 10px;
-    font-size: 13px;
+    position: relative;
+    padding: 3px 11px;
     border-bottom: var(--discovery-view-tabs-border);
-    border-radius: 5px 5px 0 0;
+    font-size: 13px;
     cursor: pointer;
     white-space: nowrap;
 }
 .view-tab.active {
-    position: relative;
     z-index: 10;
-    margin: -1px -1px 0 -1px;
-    border: var(--discovery-view-tabs-border);
-    border-bottom-color: transparent;
+    border-bottom: none;
     cursor: default;
+}
+.view-tab.active::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: var(--discovery-view-tabs-border);
+    border-bottom: none;
+    border-radius: 5px 5px 0 0;
+    pointer-events: none;
 }
 .view-tab.disabled {
     color: #aaa;
