--- a/src/views/button.css
+++ b/src/views/button.css
@@ -22,17 +22,18 @@
     width: 0;
     visibility: hidden;
 }
+.view-button:focus {
+    box-shadow: 0 0 1px 3px rgba(0, 170, 255, 0.2);
+    border-color: rgba(128, 128, 128, 0.6);
+    z-index: 1;
+}
 .view-button:hover,
 .view-button.discovery-view-popup-active {
     background-color: rgba(221, 221, 221, 0.3);
     border-color: rgba(170, 170, 170, 0.6);
 }
 .view-button:active {
-    background-color: #e0e0e0;
-}
-.view-button:focus {
-    box-shadow: 0 0 1px 3px rgba(0, 170, 255, 0.2);
-    z-index: 1;
+    background-color: rgba(131, 131, 131, 0.25);
 }
 .view-button[disabled] {
     opacity: .5;
