--- a/src/views/checkbox.css
+++ b/src/views/checkbox.css
@@ -1,3 +1,52 @@
 .view-checkbox {
-    padding-right: 1ex;
+    --discovery-checkbox-size: max(1em, 14px);
+    padding-left: var(--discovery-checkbox-size);
+}
+.view-checkbox > input {
+    -webkit-appearance: none;
+    appearance: none;
+    content: '';
+    font-size: inherit;
+    display: inline-block;
+    position: relative;
+    top: 2px;
+    box-sizing: border-box;
+    height: var(--discovery-checkbox-size);
+    width: var(--discovery-checkbox-size);
+    margin: 0;
+    margin-left: calc(-1 * var(--discovery-checkbox-size));
+    background-color: rgba(255, 255, 255, .2);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: calc(.57 * var(--discovery-checkbox-size));
+    border: 1px solid rgba(151, 162, 172, 0.65);
+    border-radius: 3px;
+    outline: none;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.view-checkbox > input:checked {
+    border-color: transparent;
+    background-color: rgba(0, 121, 232, 0.68);
+    background-image: url(checkbox.svg);
+}
+.view-checkbox > input:focus {
+    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2);
+}
+.view-checkbox > input:focus:not(:checked) {
+    border-color: rgba(0, 141, 255, 0.75);
+}
+.view-checkbox > input:active {
+    border-color: transparent;
+    background-color: rgba(25, 139, 236, .6);
+}
+.view-checkbox > input[readonly],
+.view-checkbox > input:disabled {
+    box-shadow: none;
+    border-color: rgba(165, 165, 165, 0.1);
+    background-color: rgba(165, 165, 165, 0.3);
+}
+
+.view-checkbox__label {
+    margin-left: 5px;
+    margin-right: 15px;
 }
