--- a/src/views/input.css
+++ b/src/views/input.css
@@ -7,17 +7,17 @@
     font-family: inherit;
     font-size: inherit;
     line-height: 1.2;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(153, 153, 153, 0.5);
     border-radius: 3px;
-    background-color: var(--discovery-input-bg-color);
+    background-color: rgba(255, 255, 255, .05);
     color: inherit;
     outline: 0;
 }
 .view-input input:hover {
-    border-color: #b3b3b3;
+    border-color: rgba(153, 153, 153, 0.75);
 }
 .view-input input:focus {
-    border-color: #b3b3b3;
+    border-color: rgba(0, 170, 255, .65);
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2);
     z-index: 1;
 }
