--- a/src/views/button.css
+++ b/src/views/button.css
@@ -9,7 +9,7 @@
     background-color: rgba(255, 255, 255, .1);
     border-radius: 3px;
     border: 1px solid rgba(127, 127, 127, 0.4);
-    color: inherit;
+    color: var(--discovery-color);
     
     font-family: inherit;
     font-size: inherit;
