--- a/src/views/menu-item.css
+++ b/src/views/menu-item.css
@@ -1,7 +1,7 @@
 .view-menu-item {
     display: block;
     padding: 4px 12px;
-    color: inherit;
+    color: var(--discovery-color);
     text-decoration: none;
     cursor: pointer;
 }
