Fix tree layout for last leaf

--- a/src/views/tree-leaf.css
+++ b/src/views/tree-leaf.css
@@ -21,8 +21,7 @@
 .view-tree-leaf.has-children {
     --view-leaf-lines-offset: 1;
 }
-.view-tree-leaf:last-child,
-.view-tree-leaf-children.incomplete > .view-tree-leaf.last {
+.view-tree-leaf.last {
     background-image:
         linear-gradient(to right, rgba(153, 153, 153, 0.5), rgba(153, 153, 153, 0.5));
 }
