--- a/src/pages/report/editor-view.css
+++ b/src/pages/report/editor-view.css
@@ -48,13 +48,11 @@
 
 .page-report > .report-editor .view-editor-form-content .view-editor-view-list {
     display: none;
-    padding-top: 15px;
-    padding-left: 26px;
-    padding-right: 26px;
+    padding: 15px 8px;
     font-size: 12px;
     color: #aaa;
     column-count: 8;
-    column-width: 120px;
+    column-width: 150px;
     column-gap: 20px;
     margin-right: -190px;
 }
