--- a/src/views/button.css
+++ b/src/views/button.css
@@ -6,16 +6,26 @@
     outline: none;
     margin: 0;
     
-    background-color: rgba(255, 255, 255, .1);
+    color: var(--discovery-view-button-color);
+    background-color: var(--discovery-view-button-background-color);
+    border: 1px solid var(--discovery-view-button-border-color);
     border-radius: 3px;
-    border: 1px solid rgba(127, 127, 127, 0.4);
-    color: var(--discovery-color);
     
     font-family: inherit;
     font-size: inherit;
     line-height: 1.2;
     text-align: center;
     cursor: pointer;
+
+    --discovery-view-button-color: var(--discovery-color);
+    --discovery-view-button-background-color: rgba(255, 255, 255, .1);
+    --discovery-view-button-border-color: rgba(127, 127, 127, 0.4);
+    --discovery-view-button-hover-background-color: rgba(221, 221, 221, 0.3);
+    --discovery-view-button-hover-border-color: rgba(170, 170, 170, 0.6);
+    --discovery-view-button-active-background-color: rgba(131, 131, 131, 0.25);
+    --discovery-view-button-active-border-color: var(--discovery-view-button-border-color);
+    --discovery-view-button-focus-background-color: var(--discovery-view-button-background-color);
+    --discovery-view-button-focus-border-color: rgba(128, 128, 128, 0.6);
 }
 .view-button:empty::before {
     content: '|';
@@ -24,16 +34,18 @@
 }
 .view-button:focus {
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, 0.2);
-    border-color: rgba(128, 128, 128, 0.6);
+    background-color: var(--discovery-view-button-focus-background-color);
+    border-color: var(--discovery-view-button-focus-border-color);
     z-index: 1;
 }
 .view-button:hover,
 .view-button.discovery-view-popup-active {
-    background-color: rgba(221, 221, 221, 0.3);
-    border-color: rgba(170, 170, 170, 0.6);
+    background-color: var(--discovery-view-button-hover-background-color);
+    border-color: var(--discovery-view-button-hover-border-color);
 }
 .view-button:active {
-    background-color: rgba(131, 131, 131, 0.25);
+    background-color: var(--discovery-view-button-active-background-color);
+    border-color: var(--discovery-view-button-active-border-color);
 }
 .view-button[disabled] {
     opacity: .5;
@@ -45,40 +57,49 @@
 }
 
 .view-button-primary {
-    background-color: #00aaff;  /* #1d7fad */
-    border-color: transparent !important;
-    color: white;
+    --discovery-view-button-color: white;
+    --discovery-view-button-background-color: #00aaff;
+    --discovery-view-button-border-color: transparent;
+    --discovery-view-button-hover-background-color: #009cf0;
+    --discovery-view-button-hover-border-color: transparent;
+    --discovery-view-button-active-background-color: #008ee0;
+    --discovery-view-button-focus-border-color: transparent;
 }
-.view-button-primary:hover,
-.view-button-primary.discovery-view-popup-active {
-    background-color: #009cf0;
-}
-.view-button-primary:active {
-    background-color: #008ee0;
+.discovery[data-darkmode] .view-button-primary {
+    --discovery-view-button-color: #fffd;
+    --discovery-view-button-background-color: #006aa3e6;
+    --discovery-view-button-hover-background-color: #0074b3e6;
+    --discovery-view-button-active-background-color: #006aa3d0;
 }
 
 .view-button-danger {
-    background-color: #ff6163;  /* #ca3a3b */
-    border-color: transparent !important;
-    color: white;
+    --discovery-view-button-color: white;
+    --discovery-view-button-background-color: #ff6163;
+    --discovery-view-button-border-color: transparent;
+    --discovery-view-button-hover-background-color: #f05456;
+    --discovery-view-button-hover-border-color: transparent;
+    --discovery-view-button-active-background-color: #e34449;
+    --discovery-view-button-focus-border-color: transparent;
 }
-.view-button-danger:hover,
-.view-button-danger.discovery-view-popup-active {
-    background-color: #f05456;
-}
-.view-button-danger:active {
-    background-color: #e34449;
+.discovery[data-darkmode] .view-button-danger {
+    --discovery-view-button-color: #fffd;
+    --discovery-view-button-background-color: #c32224bf;
+    --discovery-view-button-hover-background-color: #d02528bf;
+    --discovery-view-button-active-background-color: #c32224a6;
 }
 
 .view-button-warning {
-    background-color: #ffcf21;  /* #efc115 */
-    border-color: transparent !important;
-    color: rgba(0, 0, 0, .84);
+    --discovery-view-button-color: rgba(0, 0, 0, .84);
+    --discovery-view-button-background-color: #ffcf21;
+    --discovery-view-button-border-color: transparent;
+    --discovery-view-button-hover-background-color: #fcbd00;
+    --discovery-view-button-hover-border-color: transparent;
+    --discovery-view-button-active-background-color: #f7ad00;
+    --discovery-view-button-focus-border-color: transparent;
 }
-.view-button-warning:hover,
-.view-button-warning.discovery-view-popup-active {
-    background-color: #fcbd00;
-}
-.view-button-warning:active {
-    background-color: #f7ad00;
+.discovery[data-darkmode] .view-button-warning {
+    --discovery-view-button-color: #eeee;
+    --discovery-view-button-background-color: #ffd40199;
+    --discovery-view-button-hover-background-color: #ffd91aa6;
+    --discovery-view-button-active-background-color: #ffd4018e;
 }
