--- a/src/views/expand.css
+++ b/src/views/expand.css
@@ -12,27 +12,33 @@
 }
 .view-expand > .header {
     display: flex;
-    padding: 2px;
     background: rgba(192, 192, 192, 0.175);
     font-size: 12px;
     cursor: pointer;
+    margin-left: calc(var(--discovery-view-expand-trigger-size) + 1px);
+
+    --discovery-view-expand-trigger-size: 22px;
+}
+.view-expand.trigger-outside > .header {
+    margin-left: 0;
 }
 .view-expand > .header:hover {
     background: rgba(165, 165, 165, 0.3);
 }
-.view-expand > .header > :not(.trigger) {
+.view-expand > .header > .header-content {
     flex: 1;
+    padding: 2px 8px;
     overflow: hidden;
     text-overflow: ellipsis;
     pointer-events: none;
 }
 .view-expand > .header > .trigger {
     order: -1;
-    width: 20px;
-    margin: -2px;
-    margin-right: 6px;
+    width: var(--discovery-view-expand-trigger-size, 20px);
+    margin-left: calc(-1 * var(--discovery-view-expand-trigger-size) - 1px);
     text-align: center;
-    background-color: rgba(0, 0, 0, .05);
+    background-color: inherit;
+    background-image: linear-gradient(0deg, rgba(150, 150, 150, .15), rgba(150, 150, 150, .15));
 }
 .view-expand > .header > .trigger::before {
     background: url(expand.svg) no-repeat center;
