--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -141,7 +141,8 @@
     margin-left: -12px;
 }
 .discovery-sidebar .view-text-match {
-    background: rgba(255, 255, 255, 0.9);
+    color: rgba(40, 40, 40, 0.85);
+    background: rgba(255, 255, 255, 0.45);
     border-bottom: 2px solid orange;
     line-height: 1.2;
     display: inline-block;
