--- a/src/pages/report/header.css
+++ b/src/pages/report/header.css
@@ -10,7 +10,7 @@
     background-color: rgba(255, 255, 255, .92);
     transition: background-color .25s ease-in;
 }
-.discovery[data-darkmode] .page-report > .report-header {
+.discovery-root-darkmode .page-report > .report-header {
     background-color: rgba(36, 36, 36, .92);
 }
 @supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
@@ -19,7 +19,7 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
-    .discovery[data-darkmode] .page-report > .report-header {
+    .discovery-root-darkmode .page-report > .report-header {
         background-color: rgba(36, 36, 36, .8);
     }
 }
