--- a/src/views/editors.css
+++ b/src/views/editors.css
@@ -16,7 +16,7 @@
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
 }
-.discovery[data-darkmode] .discovery-editor .CodeMirror {
+.discovery-root-darkmode .discovery-editor .CodeMirror {
     color: #d1c7c3;
 }
 .discovery-editor .CodeMirror-focused {
