--- a/src/views/toc-section.css
+++ b/src/views/toc-section.css
@@ -13,7 +13,7 @@
     margin-bottom: -1px;
     transition: background-color .25s ease-in;
 }
-.discovery[data-darkmode] .view-toc-section > .header {
+.discovery-root-darkmode .view-toc-section > .header {
     background-color: rgba(50, 50, 50, .92);
     border-color: rgba(0, 0, 0, .25);
 }
@@ -23,7 +23,7 @@
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
     }
-    .discovery[data-darkmode] .view-toc-section > .header {
+    .discovery-root-darkmode .view-toc-section > .header {
         background-color: rgba(50, 50, 50, .8);
         border-color: rgba(0, 0, 0, .25);
     }
