--- a/src/views/index.css
+++ b/src/views/index.css
@@ -7,6 +7,7 @@
 @import url('./column.css');
 @import url('./columns.css');
 @import url('./content-filter.css');
+@import url('./dropdown.css');
 @import url('./editors.css');
 @import url('./expand.css');
 @import url('./headers.css');
